BorrowLenses_PartialSandbox/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Convert_Person_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert Person Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Domain__c</fullName>
        <description>Holds the parent domain of the account.</description>
        <label>Parent Domain</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Recent_Converted_Date_Time__c</fullName>
        <description>Holds the recent converted date/time from the list of its business domain account records</description>
        <inlineHelpText>Recent Converted Date/Time from Business Account Domain records.</inlineHelpText>
        <label>Recent Converted Date/Time</label>
        <summarizedField>Business_Account_Domain__c.Converted_Date_Time__c</summarizedField>
        <summaryForeignKey>Business_Account_Domain__c.Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Business_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business_Account</value>
        </filters>
        <label>Business Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Person_Accounts</fullName>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>PC_TITLE</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_PHONE3</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_DEPARTMENT</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_ADDRESS2_CITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.PersonAccount</value>
        </filters>
        <label>Person Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>